--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="container">
             <div class="nav nav-pills">
-                <div class="btn btn-secondary border"> <a href="index.html"><img src="img/Banner.png" alt="PCNorth" width="100%" height="100%"></a></div>
+                <div class="btn btn-secondary border"> <a href="index.html"><img src="img/banner.png" alt="PCNorth" width="100%" height="100%"></a></div>
             </div>
             <div class="row nav nav-pills">
                 <a class="btn btn-secondary m-1 border text-decoration-none text-dark" href="pages/productos.html">Productos</a>
