--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -11,7 +11,7 @@
     <!-- Css local -->
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
-<body class="bg-success">
+<body class="fondo">
     <header>
         <div class="container">
             <div class="nav nav-pills">
