--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <!-- Css local -->
     <link rel="stylesheet" href="css/estilo.css">
 </head>
-<body class="fondo">
+<body class="disenio">
     <header>
-        <div class="container">
+        <div class="container disenio--header">
             <div class="nav nav-pills">
                 <div class="btn btn-secondary border"> <a href="index.html"><img src="img/banner.png" alt="PCNorth" width="100%" height="100%"></a></div>
             </div>
@@ -25,12 +25,12 @@
             </div>
         </div>
     </header>
-    <main>
-        <div class="container rounded bg-secondary border border-dark">
+    <main class="container disenio--main">
+        <div class="container disenio--contenido">
             <h1 class="text-center m-4">PC North</h1>
             <h4 class="text-center md-4">En esta página podes encontrar todo lo relacionado a computadoras y su mundo.</h4>
         </div>
-        <div class="container-fluid row justify-content-center m-4 bg-secondary">
+        <div class="container row justify-content-center disenio--contenido">
             <h2>Principales Productos:</h2>
             <div class="col-4 card m-4 border">
                 <img src="img/ssd.png" class="card-img-top" alt="SSD">
@@ -88,7 +88,7 @@
             </div>
         </div>
     </main>
-    <footer class="container-fluid row bg-secondary">
+    <footer class="container row disenio--footer">
         <div class="col-lg-6 col-12 row">
             <a class="col" href="https://www.whatsapp.com"><img src="img/wpp.png" alt="Whatsapp" class="m-1 btn btn-light w-50"></a>
             <a class="col" href="https://www.instagram.com"><img src="img/Insta.png" alt="Instagram" class="m-1 btn btn-light w-50"></a>
@@ -98,7 +98,7 @@
         <div class="col-lg-6 col-12">
             <h2 class="text-center">PCNorth</h2>
         </div>
-        <div class="bg-light col-lg-6 col-12">
+        <div class="disenio--contenido col-lg-6 col-12">
             <p class="text-center">Cualquier explosion en los componentes son debidos a problemas de fabrica y no al juego de voley con estos por parte del equipo</p>
         </div>
     </footer>
