--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -11,9 +11,9 @@
     <!-- Css local -->
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
-<body class="fondo">
+<body class="disenio">
     <header>
-        <div class="container">
+        <div class="container disenio--header">
             <div class="nav nav-pills">
                 <div class="btn btn-secondary border"> <a href="../index.html"><img src="../img/banner.png" alt="PCNorth" width="100%" height="100%"></a></div>
             </div>
@@ -25,9 +25,9 @@
             </div>
         </div>
     </header>
-    <main class="container row m-2">
+    <main class="container row disenio--main">
         <!-- Novedades -->
-        <div class="container col bg-secondary rounded m-2">
+        <div class="container col disenio--contenido">
             <h2>Productos Novedosos:</h2>   
 
             <div class="col card m-4 border">
@@ -52,7 +52,7 @@
             </div>
         </div>
         <!-- Noticias -->
-        <div class="col bg-secondary rounded m-2">
+        <div class="col disenio--contenido">
             <h2>Noticias:</h2>
             <ul>
                 <li>
@@ -63,7 +63,7 @@
         </div>
 
     </main>
-    <footer class="container-fluid row bg-secondary">
+    <footer class="container row disenio--footer">
         <div class="col-lg-6 col-12 row">
             <a class="col" href="https://www.whatsapp.com"><img src="../img/wpp.png" alt="Whatsapp" class="m-1 btn btn-light w-50"></a>
             <a class="col" href="https://www.instagram.com"><img src="../img/Insta.png" alt="Instagram" class="m-1 btn btn-light w-50"></a>
@@ -73,7 +73,7 @@
         <div class="col-lg-6 col-12">
             <h2 class="text-center">PCNorth</h2>
         </div>
-        <div class="bg-light col-lg-6 col-12">
+        <div class="disenio--contenido col-lg-6 col-12">
             <p class="text-center">Cualquier explosion en los componentes son debidos a problemas de fabrica y no al juego de voley con estos por parte del equipo</p>
         </div>
     </footer>
