--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,9 +11,9 @@
     <!-- Css local -->
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
-<body class="fondo">
+<body class="disenio">
     <header>
-        <div class="container">
+        <div class="container disenio--header">
             <div class="nav nav-pills">
                 <div class="btn btn-secondary border"> <a href="../index.html"><img src="../img/banner.png" alt="PCNorth" width="100%" height="100%"></a></div>
             </div>
@@ -25,37 +25,37 @@
             </div>
         </div>
     </header>
-    <main class="container col rounded bg-secondary m-4">
+    <main class="container disenio--main">
         <!-- Formulario para contactar -->
-        <div class="m-1">
+        <div class="disenio--contenido">
             <h2>Mensaje con el staff:</h2>
         </div>
         <form action="#" class="justify-content-center">
-            <div>
-                <label for="#">Nombre:
-                    <input type="text">
-                </label>
-                <label for="#">Apellido:
-                    <input type="text">
-                </label>
-                <label for="#">Email:
-                    <input type="email">
-                </label>
-            </div>
-            <div>
-                <label for="#"><p>Solicitud:</p>
-                    <textarea name="Comentario" id="" cols="100" rows="10"></textarea>
-                </label>
-            </div>
-            <div>
-                <label for="#">
-                    <input type="submit" value="Enviar">
-                </label>
+            <div class="container">
+                <div class="col p-1 form-floating mb-3">
+                    <input type="text" class="form-control" id="floatingInput" placeholder="Solicitud">
+                    <label for="floatingInput">Solicitud</label>
+                </div>
+                <div class="col p-1 form-floating">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="Email">
+                    <label for="floatingPassword">Email</label>
+                </div>
+                <div class="col p-1 form-floating">
+                    <input type="password" class="form-control" id="floatingPassword" placeholder="Contraseña">
+                    <label for="floatingPassword">Contraseña</label>
+                </div>
+                <div class="col p-1 form-floating">
+                    <input type="text" class="form-control" id="floatingInput" placeholder="Nombre">
+                    <label for="floatingInput">Nombre</label>
+                </div>
+                <div>
+                    <button class="btn btn-light" type="submit">Enviar</button>
+                  </div>
             </div>
         </form>
         <p class="text-end">Los mensajes seran respondidos de 1 a 2 ciclos de vida de un Wookie</p>
     </main>
-    <footer class="container-fluid row bg-secondary">
+    <footer class="container row disenio--footer">
         <div class="col-lg-6 col-12 row">
             <a class="col" href="https://www.whatsapp.com"><img src="../img/wpp.png" alt="Whatsapp" class="m-1 btn btn-light w-50"></a>
             <a class="col" href="https://www.instagram.com"><img src="../img/Insta.png" alt="Instagram" class="m-1 btn btn-light w-50"></a>
@@ -65,7 +65,7 @@
         <div class="col-lg-6 col-12">
             <h2 class="text-center">PCNorth</h2>
         </div>
-        <div class="bg-light col-lg-6 col-12">
+        <div class="disenio--contenido col-lg-6 col-12">
             <p class="text-center">Cualquier explosion en los componentes son debidos a problemas de fabrica y no al juego de voley con estos por parte del equipo</p>
         </div>
     </footer>
