--- a/pages/productos.html
+++ b/pages/productos.html
@@ -11,9 +11,9 @@
     <!-- Css local -->
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
-<body class="fondo">
+<body class="disenio">
     <header>
-        <div class="container">
+        <div class="container disenio--header">
             <div class="nav nav-pills">
                 <div class="btn btn-secondary border"> <a href="../index.html"><img src="../img/banner.png" alt="PCNorth" width="100%" height="100%"></a></div>
             </div>
@@ -25,10 +25,10 @@
             </div>
         </div>
     </header>
-    <main class="bg-secondary rounded m-2">
-        <h2 class="text-center">Nuestros Productos:</h2>
+    <main class="container disenio--main">
+        <h2 class="disenio--contenido">Nuestros Productos:</h2>
 
-        <div class="container row">
+        <div class="container row disenio--contenido">
             <div class="col-lg-2 col-6 card m-4 border">
                 <img src="../img/ssd.png" class="card-img-top" alt="SSD">
           
@@ -86,7 +86,7 @@
         </div>
         <h6 class="m-2">Todos los precios estan atados al dolar del Mes</h4>
     </main>
-    <footer class="container-fluid row bg-secondary">
+    <footer class="container row disenio--footer">
         <div class="col-lg-6 col-12 row">
             <a class="col" href="https://www.whatsapp.com"><img src="../img/wpp.png" alt="Whatsapp" class="m-1 btn btn-light w-50"></a>
             <a class="col" href="https://www.instagram.com"><img src="../img/Insta.png" alt="Instagram" class="m-1 btn btn-light w-50"></a>
@@ -96,7 +96,7 @@
         <div class="col-lg-6 col-12">
             <h2 class="text-center">PCNorth</h2>
         </div>
-        <div class="bg-light col-lg-6 col-12">
+        <div class="disenio--contenido col-lg-6 col-12">
             <p class="text-center">Cualquier explosion en los componentes son debidos a problemas de fabrica y no al juego de voley con estos por parte del equipo</p>
         </div>
     </footer>
